tests/snapshots/serde__de_bool_true.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\ntrue"
---
=== VALUE ===
Bool(true)

=== HEAP ===
Heap {}

