tests/snapshots/serde__de_boolean_primitive_false.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Boolean(false)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BooleanObject(
        false,
    ),
}

