tests/snapshots/serde__de_boolean_primitive_true.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Boolean(true)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BooleanObject(
        true,
    ),
}

