tests/snapshots/serde__de_circular_reference.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst foo = {}; foo.foo = foo; foo"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("foo"): HeapReference(
            *0,
        ),
    },
}

