tests/snapshots/serde__de_dataview_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new Uint8Array([1, 2]).buffer, 1, 1)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            2,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: DataView,
        buffer: *0,
        byte_offset: 1,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

