tests/snapshots/serde__de_dataview_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new ArrayBuffer(8))"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: DataView,
        buffer: *0,
        byte_offset: 0,
        length: 8,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

